--- a/Formativo_Backend/.env
+++ b/Formativo_Backend/.env
@@ -1,2 +1,6 @@
 EMAIL_USER=softwash3680@gmail.com
 EMAIL_PASS=sqizwfiyyrmnjnti
+DB_NAME=Proyecto_Softwash
+DB_USER=root
+DB_PASSWORD=zyzz
+DB_DIALECT=mysql
