implementando autenticacion de rutas en roles

--- a/Formativo_Backend/.env
+++ b/Formativo_Backend/.env
@@ -4,3 +4,5 @@ DB_NAME=Proyecto_Softwash
 DB_USER=root
 DB_PASSWORD=zyzz
 DB_DIALECT=mysql
+API_KEY= proyectoAdso3680Softwash
+JWT_SECRET=HBIimCuxfp3thzQRK1GqyjsEZUeJcNV8
