--- a/Formativo_Backend/package.json
+++ b/Formativo_Backend/package.json
@@ -21,13 +21,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http-errors": "^2.0.0",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   }
