--- a/Formativo_Backend/package.json
+++ b/Formativo_Backend/package.json
@@ -1,12 +1,13 @@
 {
+  "type": "commonjs",
   "name": "formativo_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "nodemon src/index",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
@@ -25,12 +26,13 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.32.1",
-    "sequelize-cli": "^6.6.1"
+    "sequelize": "^6.34.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
