Cambie la pass de database

--- a/Formativo_Backend/.env
+++ b/Formativo_Backend/.env
@@ -2,7 +2,7 @@ EMAIL_USER=softwash3680@gmail.com
 EMAIL_PASS=sqizwfiyyrmnjnti
 DB_NAME=Proyecto_Softwash
 DB_USER=root
-DB_PASSWORD=zyzz
+DB_PASSWORD=root
 DB_DIALECT=mysql
 API_KEY= proyectoAdso3680Softwash
 JWT_SECRET=HBIimCuxfp3thzQRK1GqyjsEZUeJcNV8
