--- a/Formativo_Backend/package.json
+++ b/Formativo_Backend/package.json
@@ -25,6 +25,7 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
