--- a/Formativo_Backend/package.json
+++ b/Formativo_Backend/package.json
@@ -8,7 +8,6 @@
     "start": "nodemon src/index",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint",
-    "sequelize": "sequelize",
     "migrations:generate": "sequelize-cli migration:generate --name",
     "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
@@ -26,6 +25,7 @@
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
