--- a/Formativo_Backend/.env
+++ b/Formativo_Backend/.env
@@ -3,6 +3,7 @@ EMAIL_PASS=sqizwfiyyrmnjnti
 DB_NAME=Proyecto_Softwash
 DB_USER=root
 DB_PASSWORD=zyzz
+DB_PORT=3306
 DB_DIALECT=mysql
 API_KEY= proyectoAdso3680Softwash
 JWT_SECRET=HBIimCuxfp3thzQRK1GqyjsEZUeJcNV8
